# apirest-sysprodcs

./: Cargo.toml
src/: app_state.rs  authentication.rs  database.rs  errors.rs  extractors_token.rs  main.rs  tocken.rs
src/api/: mod.rs
src/api/configuration/: mod.rs  route_configuration.rs
src/api/configuration/controllers/: c_cuotas.rs  c_cuotastarjetas.rs  c_modulos.rs  c_tarjetas.rs  mod.rs
src/api/configuration/services/: mod.rs  s_cuotas.rs  s_cuotas_tarjetas.rs  s_modulos.rs  s_tarjetas.rs
src/api/configuration/stores/: c_configempresas_abmlc_sp.sql  c_cuotas_abmlc_sp.sql  c_modules_by_user.sql  c_tarjetas_abmlc_sp.sql
src/api/productos/: mod.rs  route_productos.rs
src/api/productos/controllers/: c_categoria.rs  c_productos.rs  mod.rs
src/api/productos/services/: mod.rs  s_categoria.rs  s_productos.rs
src/api/productos/stores/: c_categoria_abmlc_sp.sql
src/api/proveedor/: mod.rs  route_proveedor.rs
src/api/proveedor/controllers/: c_proveedor.rs  mod.rs
src/api/proveedor/services/: mod.rs  s_proveedores.rs
src/api/proveedor/stores/: c_proveedor_abmlc_sp.sql
src/api/user/: mod.rs  route_users.rs
src/api/user/controllers/: c_login.rs  mod.rs
src/api/user/services/: mod.rs  s_login.rs
src/api/user/stores/: c_user_inf_login_c_sp.sql
src/static/: products.json
